Lexicon a11y/mark up fixes

--- a/views/lexicon/base.html.twig
+++ b/views/lexicon/base.html.twig
@@ -19,16 +19,16 @@
     set actions_menu = [
         html.link({
           'label': html.icon('save') ~ ' Save',
-          'href': '#save'
+          'href': '#'
         }),
         html.link({
           'label': html.icon('print') ~ ' Print',
-          'href': '#print'
+          'href': '#'
         }),
         html.divider(),
         html.link({
           'label': html.icon('trash') ~ ' Delete',
-          'href': '#delete',
+          'href': '#',
           'class': 'link--danger disabled',
           'attributes': 'data-on-datagrid-item-selected=enable'
         })
