--- a/views/lexicon/forms/content.html.twig
+++ b/views/lexicon/forms/content.html.twig
@@ -126,7 +126,8 @@
             'actions': [
                 html.button({
                     'label': 'Save',
-                    'class': 'btn--primary'
+                    'class': 'btn--primary',
+                    'type': 'submit'
                 }),
                 html.button({
                     'label': 'Cancel',
