--- a/views/lexicon/forms/range.html.twig
+++ b/views/lexicon/forms/range.html.twig
@@ -9,7 +9,7 @@
     {{ form.fieldset_start() }}
     {{
         form.range({
-            'id': 'range-1',
+            'id': 'guid-' ~ random(),
             'label': 'Range field'
         })
     }}
@@ -17,7 +17,7 @@
 
     {{
         form.range({
-            'id': 'range-2',
+            'id': 'guid-' ~ random(),
             'label': 'Range field with value',
             'value': '6'
         })
@@ -25,7 +25,7 @@
 
     {{
         form.range({
-            'id': 'range-3',
+            'id': 'guid-' ~ random(),
             'label': 'Required',
             'required': true
         })
@@ -33,7 +33,7 @@
 
     {{
         form.range({
-            'id': 'range-4',
+            'id': 'guid-' ~ random(),
             'label': 'Range field with help',
             'help': 'Help text to give more information about expected input'
         })
@@ -41,7 +41,7 @@
 
     {{
         form.range({
-            'id': 'range-5',
+            'id': 'guid-' ~ random(),
             'label': 'Range field with guidance',
             'guidance': 'Help text to give more information about expected input'
         })
@@ -49,7 +49,7 @@
 
     {{
         form.range({
-            'id': 'range-6',
+            'id': 'guid-' ~ random(),
             'label': 'Required with guidance',
             'guidance': 'Help text to give more information about expected input',
             'required': true
@@ -61,13 +61,7 @@
 
     {{
         form.range({
-            'help': 'This example omits the label option entirely'
-        })
-    }}
-
-    {{
-        form.range({
-            'id': 'range-7',
+            'id': 'guid-' ~ random(),
             'label': 'Range field',
             'show-label': false,
             'help': 'This example hides the label with the <code>show-label</code> option'
@@ -76,7 +70,7 @@
 
     {{
         form.range({
-            'id': 'range-8',
+            'id': 'guid-' ~ random(),
             'label': 'Range input with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
@@ -87,7 +81,7 @@
 
     {{
         form.range({
-            'id': 'range-9',
+            'id': 'guid-' ~ random(),
             'label': 'Range input with a longer than expected label but this time we use the form__group--top class to keep the label on a single line',
             'class': 'form__group--top',
             'name': 'inputTextLong',
@@ -99,7 +93,7 @@
 
     {{
         form.range({
-            'id': 'range-10',
+            'id': 'guid-' ~ random(),
             'label': 'The same as above, but this time we also add the .form__group--flush class to keep everything on the left edge',
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
@@ -114,6 +108,7 @@
 
     {{
         form.range({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--mini',
             'class': 'form__group--top form__group--flush form__group--mini',
             'name': 'inputTextLong',
@@ -125,6 +120,7 @@
 
     {{
         form.range({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--small',
             'class': 'form__group--top form__group--flush form__group--small',
             'name': 'inputTextLong',
@@ -136,6 +132,7 @@
 
     {{
         form.range({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--medium',
             'class': 'form__group--top form__group--flush form__group--medium',
             'name': 'inputTextLong',
@@ -147,6 +144,7 @@
 
     {{
         form.range({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group',
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
@@ -158,6 +156,7 @@
 
     {{
         form.range({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--large',
             'class': 'form__group--top form__group--flush form__group--large',
             'name': 'inputTextLong',
@@ -169,6 +168,7 @@
 
     {{
         form.range({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--xlarge',
             'class': 'form__group--top form__group--flush form__group--xlarge',
             'name': 'inputTextLong',
@@ -180,6 +180,7 @@
 
     {{
         form.range({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--full',
             'class': 'form__group--top form__group--flush form__group--full',
             'name': 'inputTextLong',
@@ -195,7 +196,7 @@
 
     {{
         form.range({
-            'id': 'range-11',
+            'id': 'guid-' ~ random(),
             'label': 'Range field with error',
             'error': 'Please complete this field'
         })
@@ -203,7 +204,7 @@
 
     {{
         form.range({
-            'id': 'range-12',
+            'id': 'guid-' ~ random(),
             'label': 'Range field with multiple errors',
             'error': ['Do this', 'Do this too']
         })
@@ -211,7 +212,7 @@
 
     {{
         form.range({
-            'id': 'range-13',
+            'id': 'guid-' ~ random(),
             'label': 'Range field with error and help',
             'error': 'Please complete this field',
             'help': 'Help text to give more information about expected input'
@@ -220,7 +221,7 @@
 
     {{
         form.range({
-            'id': 'range-14',
+            'id': 'guid-' ~ random(),
             'class': 'has-error',
             'label': 'Range field error with help only',
             'help': 'Help text to give more information about expected input'
@@ -232,7 +233,7 @@
 
     {{
         form.range({
-            'id': 'range-15',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-changed"',
             'class': 'has-changed',
             'help': 'Highlight whether an action elsewhere affects an input'
@@ -240,7 +241,7 @@
     }}
     {{
         form.range({
-            'id': 'range-16',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-success"',
             'class': 'has-success',
             'help': 'Something good happened'
@@ -249,7 +250,7 @@
 
     {{
         form.range({
-            'id': 'range-17',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-warning"',
             'class': 'has-warning',
             'help': 'Something bad happened'
@@ -257,7 +258,7 @@
     }}
     {{
         form.range({
-            'id': 'range-18',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-error"',
             'class': 'has-error',
             'help': 'Automatically added if using <code>error</code> option'
@@ -265,7 +266,7 @@
     }}
     {{
         form.range({
-            'id': 'range-19',
+            'id': 'guid-' ~ random(),
             'label': '"disabled": true',
             'disabled': true,
             'help': 'Stop! Can’t touch this'
@@ -277,7 +278,7 @@
 
     {{
         form.range({
-            'id': 'range-1-col',
+            'id': 'guid-' ~ random(),
             'label': 'One column',
             'class': 'form__control-col--1',
             'name': 'inputTextMini',
@@ -286,7 +287,7 @@
 
     {{
         form.range({
-            'id': 'range-2-col',
+            'id': 'guid-' ~ random(),
             'label': 'Two columns',
             'class': 'form__control-col--2',
             'name': 'inputTextSmall'
@@ -295,7 +296,7 @@
 
     {{
         form.range({
-            'id': 'range-3-col',
+            'id': 'guid-' ~ random(),
             'label': 'Three columns',
             'class': 'form__control-col--3',
             'name': 'inputTextMedium'
@@ -304,7 +305,7 @@
 
     {{
         form.range({
-            'id': 'range-4-col',
+            'id': 'guid-' ~ random(),
             'label': 'Four columns',
             'class': 'form__control-col--4',
             'name': 'inputTextRegular'
@@ -313,7 +314,7 @@
 
     {{
         form.range({
-            'id': 'range-5-col',
+            'id': 'guid-' ~ random(),
             'label': 'Five columns',
             'class': 'form__control-col--5',
             'name': 'inputTextLarge'
@@ -322,7 +323,7 @@
 
     {{
         form.range({
-            'id': 'range-6-col',
+            'id': 'guid-' ~ random(),
             'label': 'Six columns',
             'class': 'form__control-col--6',
             'name': 'inputTextXLarge'
@@ -331,7 +332,7 @@
 
     {{
         form.range({
-            'id': 'range-7-col',
+            'id': 'guid-' ~ random(),
             'label': 'Seven columns',
             'class': 'form__control-col--7',
             'name': 'inputTextFull'
@@ -340,7 +341,7 @@
 
     {{
         form.range({
-            'id': 'range-8-col',
+            'id': 'guid-' ~ random(),
             'label': 'Eight columns',
             'class': 'form__control-col--8',
             'name': 'inputTextFull'
@@ -349,7 +350,7 @@
 
     {{
         form.range({
-            'id': 'range-9-col',
+            'id': 'guid-' ~ random(),
             'label': 'Nine columns',
             'class': 'form__control-col--9',
             'name': 'inputTextFull'
@@ -361,7 +362,7 @@
 
     {{
         form.range({
-            'id': 'range-20',
+            'id': 'guid-' ~ random(),
             'label': 'Mini',
             'class': 'form__group--mini',
             'name': 'inputTextMini'
@@ -370,7 +371,7 @@
 
     {{
         form.range({
-            'id': 'range-21',
+            'id': 'guid-' ~ random(),
             'label': 'Small',
             'class': 'form__group--small',
             'name': 'inputTextSmall'
@@ -379,7 +380,7 @@
 
     {{
         form.range({
-            'id': 'range-22',
+            'id': 'guid-' ~ random(),
             'label': 'Medium',
             'class': 'form__group--medium',
             'name': 'inputTextMedium'
@@ -388,7 +389,7 @@
 
     {{
         form.range({
-            'id': 'range-23',
+            'id': 'guid-' ~ random(),
             'label': 'Regular',
             'class': 'form__group--regular',
             'name': 'inputTextRegular'
@@ -397,7 +398,7 @@
 
     {{
         form.range({
-            'id': 'range-24',
+            'id': 'guid-' ~ random(),
             'label': 'Large',
             'class': 'form__group--large',
             'name': 'inputTextLarge'
@@ -406,7 +407,7 @@
 
     {{
         form.range({
-            'id': 'range-25',
+            'id': 'guid-' ~ random(),
             'label': 'Extra Large',
             'class': 'form__group--xlarge',
             'name': 'inputTextXLarge'
@@ -415,7 +416,7 @@
 
     {{
         form.range({
-            'id': 'range-26',
+            'id': 'guid-' ~ random(),
             'label': 'Full',
             'class': 'form__group--full',
             'name': 'inputTextFull'
@@ -427,7 +428,7 @@
 
     {{
         form.range({
-            'id': 'range-27',
+            'id': 'guid-' ~ random(),
             'label': 'Prepended',
             'prepend': '£'
         })
@@ -435,7 +436,7 @@
 
     {{
         form.range({
-            'id': 'range-28',
+            'id': 'guid-' ~ random(),
             'label': 'Appended',
             'append': '.00'
         })
@@ -443,7 +444,7 @@
 
     {{
         form.range({
-            'id': 'range-29',
+            'id': 'guid-' ~ random(),
             'label': 'Appended with guidance',
             'append': '.00',
             'guidance': 'Help text to give more information about expected input'
@@ -452,7 +453,7 @@
 
     {{
         form.range({
-            'id': 'range-30',
+            'id': 'guid-' ~ random(),
             'label': 'Prepended &amp; Appended',
             'append': html.icon('volume-up'),
             'prepend': html.icon('volume-down')
@@ -466,7 +467,7 @@
     {% for i in 1..9 %}
         {{
             form.range({
-                'id': 'range-' ~ random(),
+                'id': 'guid-' ~ random(),
                 'name': 'range-' ~ random(),
                 'prepend': 'Prepend',
                 'label': i ~ ' columns',
@@ -481,7 +482,7 @@
     {% for width in legacyGrid %}
         {{
             form.range({
-                'id': 'range-' ~ random(),
+                'id': 'guid-' ~ random(),
                 'name': 'range-' ~ random(),
                 'prepend': 'Prepend',
                 'label': width,
@@ -553,7 +554,19 @@
 
 
     {{
-        form.end()
+        form.end({
+            'actions': [
+                html.button({
+                    'label': 'Save',
+                    'class': 'btn--primary',
+                    'type': 'submit'
+                }),
+                html.button({
+                    'label': 'Cancel',
+                    'class': 'btn--naked'
+                })
+            ]
+        })
     }}
 
 {% endblock tab_content %}
