--- a/views/lexicon/forms/text.html.twig
+++ b/views/lexicon/forms/text.html.twig
@@ -9,14 +9,14 @@
     {{ form.fieldset_start() }}
     {{
         form.text({
-            'id': 'text-1',
+            'id': 'guid-' ~ random(),
             'label': 'Text field'
         })
     }}
 
     {{
         form.text({
-            'id': 'text-2',
+            'id': 'guid-' ~ random(),
             'label': 'Text field with value',
             'value': 'My value'
         })
@@ -24,7 +24,7 @@
 
     {{
         form.text({
-            'id': 'text-3',
+            'id': 'guid-' ~ random(),
             'label': 'Required',
             'required': true
         })
@@ -32,7 +32,7 @@
 
     {{
         form.text({
-            'id': 'text-4',
+            'id': 'guid-' ~ random(),
             'label': 'Placeholder',
             'placeholder': 'Oh, hello'
         })
@@ -40,7 +40,7 @@
 
     {{
         form.text({
-            'id': 'text-5',
+            'id': 'guid-' ~ random(),
             'label': 'Text field with help',
             'help': 'Help text to give more information about expected input'
         })
@@ -48,7 +48,7 @@
 
     {{
         form.text({
-            'id': 'text-6',
+            'id': 'guid-' ~ random(),
             'label': 'Text field with guidance',
             'guidance': 'Help text to give more information about expected input'
         })
@@ -56,7 +56,7 @@
 
     {{
         form.text({
-            'id': 'text-7',
+            'id': 'guid-' ~ random(),
             'label': 'Required with guidance',
             'guidance': 'Help text to give more information about expected input',
             'required': true
@@ -68,13 +68,7 @@
 
     {{
         form.text({
-            'help': 'This example omits the label option entirely'
-        })
-    }}
-
-    {{
-        form.text({
-            'id': 'text-8',
+            'id': 'guid-' ~ random(),
             'label': 'Text field',
             'show-label': false,
             'help': 'This example hides the label with the <code>show-label</code> option'
@@ -83,7 +77,7 @@
 
     {{
         form.text({
-            'id': 'text-9',
+            'id': 'guid-' ~ random(),
             'label': 'Text input with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
@@ -94,7 +88,7 @@
 
     {{
         form.text({
-            'id': 'text-10',
+            'id': 'guid-' ~ random(),
             'label': 'Text input with a longer than expected label but this time we use the form__group--top class to keep the label on a single line',
             'class': 'form__group--top',
             'name': 'inputTextLong',
@@ -106,7 +100,7 @@
 
     {{
         form.text({
-            'id': 'text-11',
+            'id': 'guid-' ~ random(),
             'label': 'The same as above, but this time we also add the .form__group--flush class to keep everything on the left edge',
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
@@ -121,6 +115,7 @@
 
     {{
         form.text({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--mini',
             'class': 'form__group--top form__group--flush form__group--mini',
             'name': 'inputTextLong',
@@ -132,6 +127,7 @@
 
     {{
         form.text({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--small',
             'class': 'form__group--top form__group--flush form__group--small',
             'name': 'inputTextLong',
@@ -143,6 +139,7 @@
 
     {{
         form.text({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--medium',
             'class': 'form__group--top form__group--flush form__group--medium',
             'name': 'inputTextLong',
@@ -154,6 +151,7 @@
 
     {{
         form.text({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group',
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
@@ -165,6 +163,7 @@
 
     {{
         form.text({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--large',
             'class': 'form__group--top form__group--flush form__group--large',
             'name': 'inputTextLong',
@@ -176,6 +175,7 @@
 
     {{
         form.text({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--xlarge',
             'class': 'form__group--top form__group--flush form__group--xlarge',
             'name': 'inputTextLong',
@@ -187,6 +187,7 @@
 
     {{
         form.text({
+            'id': 'guid-' ~ random(),
             'label': 'form__group--top form__group--flush and form__group--full',
             'class': 'form__group--top form__group--flush form__group--full',
             'name': 'inputTextLong',
@@ -202,7 +203,7 @@
 
     {{
         form.text({
-            'id': 'text-12',
+            'id': 'guid-' ~ random(),
             'label': 'Text field with error',
             'error': 'Please complete this field'
         })
@@ -210,7 +211,7 @@
 
     {{
         form.text({
-            'id': 'text-13',
+            'id': 'guid-' ~ random(),
             'label': 'Text field with multiple errors',
             'error': ['Do this', 'Do this too']
         })
@@ -218,7 +219,7 @@
 
     {{
         form.text({
-            'id': 'text-14',
+            'id': 'guid-' ~ random(),
             'label': 'Text field with error and help',
             'error': 'Please complete this field',
             'help': 'Help text to give more information about expected input'
@@ -227,7 +228,7 @@
 
     {{
         form.text({
-            'id': 'text-15',
+            'id': 'guid-' ~ random(),
             'class': 'has-error',
             'label': 'Text field error with help only',
             'help': 'Help text to give more information about expected input'
@@ -239,7 +240,7 @@
 
     {{
         form.text({
-            'id': 'text-16',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-changed"',
             'class': 'has-changed',
             'help': 'Highlight whether an action elsewhere affects an input',
@@ -248,7 +249,7 @@
     }}
     {{
         form.text({
-            'id': 'text-17',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-success"',
             'class': 'has-success',
             'help': 'Something good happened',
@@ -258,7 +259,7 @@
 
     {{
         form.text({
-            'id': 'text-18',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-warning"',
             'class': 'has-warning',
             'help': 'Something bad happened',
@@ -267,7 +268,7 @@
     }}
     {{
         form.text({
-            'id': 'text-19',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-error"',
             'class': 'has-error',
             'help': 'Automatically added if using <code>error</code> option',
@@ -276,7 +277,7 @@
     }}
     {{
         form.text({
-            'id': 'text-20',
+            'id': 'guid-' ~ random(),
             'label': '"disabled": true',
             'disabled': true,
             'help': 'Stop! Can’t touch this',
@@ -289,7 +290,7 @@
 
     {{
         form.text({
-            'id': 'text-1-col',
+            'id': 'guid-' ~ random(),
             'label': 'One column',
             'class': 'form__control-col--1',
             'name': 'inputTextMini',
@@ -298,7 +299,7 @@
 
     {{
         form.text({
-            'id': 'text-2-col',
+            'id': 'guid-' ~ random(),
             'label': 'Two columns',
             'class': 'form__control-col--2',
             'name': 'inputTextSmall'
@@ -307,7 +308,7 @@
 
     {{
         form.text({
-            'id': 'text-3-col',
+            'id': 'guid-' ~ random(),
             'label': 'Three columns',
             'class': 'form__control-col--3',
             'name': 'inputTextMedium'
@@ -316,7 +317,7 @@
 
     {{
         form.text({
-            'id': 'text-4-col',
+            'id': 'guid-' ~ random(),
             'label': 'Four columns',
             'class': 'form__control-col--4',
             'name': 'inputTextRegular'
@@ -325,7 +326,7 @@
 
     {{
         form.text({
-            'id': 'text-5-col',
+            'id': 'guid-' ~ random(),
             'label': 'Five columns',
             'class': 'form__control-col--5',
             'name': 'inputTextLarge'
@@ -334,7 +335,7 @@
 
     {{
         form.text({
-            'id': 'text-6-col',
+            'id': 'guid-' ~ random(),
             'label': 'Six columns',
             'class': 'form__control-col--6',
             'name': 'inputTextXLarge'
@@ -343,7 +344,7 @@
 
     {{
         form.text({
-            'id': 'text-7-col',
+            'id': 'guid-' ~ random(),
             'label': 'Seven columns',
             'class': 'form__control-col--7',
             'name': 'inputTextFull'
@@ -352,7 +353,7 @@
 
     {{
         form.text({
-            'id': 'text-8-col',
+            'id': 'guid-' ~ random(),
             'label': 'Eight columns',
             'class': 'form__control-col--8',
             'name': 'inputTextFull'
@@ -361,7 +362,7 @@
 
     {{
         form.text({
-            'id': 'text-9-col',
+            'id': 'guid-' ~ random(),
             'label': 'Nine columns',
             'class': 'form__control-col--9',
             'name': 'inputTextFull'
@@ -373,7 +374,7 @@
 
     {{
         form.text({
-            'id': 'text-21',
+            'id': 'guid-' ~ random(),
             'label': 'Mini',
             'class': 'form__group--mini',
             'name': 'inputTextMini'
@@ -382,7 +383,7 @@
 
     {{
         form.text({
-            'id': 'text-22',
+            'id': 'guid-' ~ random(),
             'label': 'Small',
             'class': 'form__group--small',
             'name': 'inputTextSmall'
@@ -391,7 +392,7 @@
 
     {{
         form.text({
-            'id': 'text-23',
+            'id': 'guid-' ~ random(),
             'label': 'Medium',
             'class': 'form__group--medium',
             'name': 'inputTextMedium'
@@ -400,7 +401,7 @@
 
     {{
         form.text({
-            'id': 'text-24',
+            'id': 'guid-' ~ random(),
             'label': 'Regular',
             'class': 'form__group--regular',
             'name': 'inputTextRegular'
@@ -409,7 +410,7 @@
 
     {{
         form.text({
-            'id': 'text-25',
+            'id': 'guid-' ~ random(),
             'label': 'Large',
             'class': 'form__group--large',
             'name': 'inputTextLarge'
@@ -418,7 +419,7 @@
 
     {{
         form.text({
-            'id': 'text-26',
+            'id': 'guid-' ~ random(),
             'label': 'Extra Large',
             'class': 'form__group--xlarge',
             'name': 'inputTextXLarge'
@@ -427,7 +428,7 @@
 
     {{
         form.text({
-            'id': 'text-27',
+            'id': 'guid-' ~ random(),
             'label': 'Full',
             'class': 'form__group--full',
             'name': 'inputTextFull'
@@ -439,7 +440,7 @@
 
     {{
         form.text({
-            'id': 'text-28',
+            'id': 'guid-' ~ random(),
             'label': 'Prepended',
             'prepend': '£'
         })
@@ -447,7 +448,7 @@
 
     {{
         form.text({
-            'id': 'text-29',
+            'id': 'guid-' ~ random(),
             'label': 'Appended',
             'append': '.00'
         })
@@ -455,7 +456,7 @@
 
     {{
         form.text({
-            'id': 'text-30',
+            'id': 'guid-' ~ random(),
             'label': 'Appended with guidance',
             'append': '.00',
             'guidance': 'Help text to give more information about expected input'
@@ -464,7 +465,7 @@
 
     {{
         form.text({
-            'id': 'text-31',
+            'id': 'guid-' ~ random(),
             'label': 'Prepended &amp; Appended',
             'append': '.00',
             'prepend': '£'
@@ -473,7 +474,7 @@
 
     {{
         form.text({
-            'id': 'text-32',
+            'id': 'guid-' ~ random(),
             'label': 'Appended button',
             'append_type': 'button',
             'append': html.button({ 'label': 'Button' })
@@ -572,7 +573,19 @@
     {{ form.fieldset_end() }}
 
     {{
-        form.end()
+        form.end({
+            'actions': [
+                html.button({
+                    'label': 'Save',
+                    'class': 'btn--primary',
+                    'type': 'submit'
+                }),
+                html.button({
+                    'label': 'Cancel',
+                    'class': 'btn--naked'
+                })
+            ]
+        })
     }}
 {% endblock tab_content %}
 
