--- a/views/lexicon/patterns/rules/one.html.twig
+++ b/views/lexicon/patterns/rules/one.html.twig
@@ -131,9 +131,9 @@
                                     'removeable': false,
                                     'inputs': [
                                         form.select2({
+                                            'id': 'select2-' ~ random(),
                                             'class': 'form__group--medium',
                                             'label': 'Choose trigger',
-                                            'placeholder': 'Choose trigger',
                                             'show-label': false,
                                             'options':
                                             [
@@ -158,9 +158,9 @@
                                     'show_or': false,
                                     'inputs': [
                                         form.select2({
+                                            'id': 'select2-' ~ random(),
                                             'class': 'form__group--medium',
                                             'label': 'Choose trigger',
-                                            'placeholder': 'Choose condition',
                                             'show-label': false,
                                             'options':
                                             [
@@ -171,9 +171,9 @@
                                             ]
                                         }),
                                         form.select({
+                                            'id': 'select-' ~ random(),
                                             'class': 'form__group--small',
                                             'label': 'Choose',
-                                            'placeholder': 'Choose',
                                             'show-label': false,
                                             'options':
                                             [
@@ -188,6 +188,7 @@
                                             ]
                                         }),
                                         form.select2({
+                                            'id': 'select2-' ~ random(),
                                             'class': 'form__group--medium',
                                             'label': 'Choose user type',
                                             'show-label': false,
@@ -218,9 +219,9 @@
                                     ],
                                     'inputs': [
                                         form.select2({
+                                            'id': 'select2-' ~ random(),
                                             'class': 'form__group--medium',
                                             'label': 'Choose trigger',
-                                            'placeholder': 'Choose condition',
                                             'show-label': false,
                                             'options':
                                             [
@@ -231,9 +232,9 @@
                                             ]
                                         }),
                                         form.select({
+                                            'id': 'select-' ~ random(),
                                             'class': 'form__group--small',
                                             'label': 'Choose',
-                                            'placeholder': 'Choose',
                                             'show-label': false,
                                             'options':
                                             [
@@ -248,6 +249,7 @@
                                             ]
                                         }),
                                         form.select2({
+                                            'id': 'select2-' ~ random(),
                                             'class': 'form__group--medium has-error',
                                             'label': 'Choose user type',
                                             'show-label': false,
@@ -275,6 +277,7 @@
                                 rule.block_then({
                                     'inputs': [
                                         form.select2({
+                                            'id': 'select2-' ~ random(),
                                             'class': 'form__group--medium',
                                             'label': 'Choose action',
                                             'show-label': false,
@@ -309,6 +312,7 @@
                                             ]
                                         }),
                                         form.select2({
+                                            'id': 'select2-' ~ random(),
                                             'class': 'form__group--medium',
                                             'label': 'Using template',
                                             'data-html': 'true',
