--- a/views/lexicon/patterns/table-detail/table-detail.html.twig
+++ b/views/lexicon/patterns/table-detail/table-detail.html.twig
@@ -9,11 +9,11 @@
 <table class="table table--horizontal table--full" data-table-detail-table>
     <thead>
         <tr>
-            <th><a href="#">Date</a></th>
-            <th><a href="#">Time</a></th>
-            <th><a href="#">User type</a></th>
-            <th><a href="#">Event</a></th>
-            <th><a href="#">Actions</a></th>
+            <th>Date</th>
+            <th>Time</th>
+            <th>User type</th>
+            <th>Event</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
