--- a/views/lexicon/tables/basic-scrolling.html.twig
+++ b/views/lexicon/tables/basic-scrolling.html.twig
@@ -18,8 +18,8 @@
         <tbody>
             {% for i in 0..5 %}
             <tr>
-                <td><a href="#example" class="table-link">Sysadmin - Ansible 1</a></td>
-                <td class="monospace"><a href="#example" class="table-link">10.101.0.175</a></td>
+                <td><a href="#" class="table-link">Sysadmin - Ansible 1</a></td>
+                <td class="monospace"><a href="#" class="table-link">10.101.0.175</a></td>
                 <td>
                     {{
                         html.label({
@@ -42,8 +42,8 @@
             </tr>
 
             <tr class="table__tr">
-                <td><a href="#example" class="table-link">Sysasdmin - WISP 1</a></td>
-                <td class="monospace"><a href="#example" class="table-link">10.101.0.138</a></td>
+                <td><a href="#" class="table-link">Sysasdmin - WISP 1</a></td>
+                <td class="monospace"><a href="#" class="table-link">10.101.0.138</a></td>
                 <td>
                     {{
                         html.label({
