--- a/views/lexicon/tables/sortable.html.twig
+++ b/views/lexicon/tables/sortable.html.twig
@@ -269,7 +269,7 @@
                     document.docx
                 </td>
                 <td class="centered">
-                    {{ form.checkbox({'bare': 'true'}) }}
+                    {{ form.checkbox({'bare': 'true', 'aria-label': 'document.docx'}) }}
                 </td>
             </tr>
 
@@ -287,7 +287,7 @@
                     anna_kournikova.exe
                 </td>
                 <td class="centered">
-                    {{ form.checkbox({'bare': 'true'}) }}
+                    {{ form.checkbox({'bare': 'true', 'aria-label': 'Delete anna_kournikova.exe'}) }}
                 </td>
             </tr>
 
@@ -305,7 +305,7 @@
                     sdfghjkhjifldshjkfdshajkl.pdf
                 </td>
                 <td class="centered">
-                    {{ form.checkbox({'bare': 'true'}) }}
+                    {{ form.checkbox({'bare': 'true', 'aria-label': 'Delete sdfghjkhjifldshjkfdshajkl.pdf'}) }}
                 </td>
             </tr>
         </tbody>
