--- a/views/lexicon/tabs/filters.html.twig
+++ b/views/lexicon/tabs/filters.html.twig
@@ -50,7 +50,7 @@
                         'label': 'Size',
                         'id': 'size',
                         'options': {
-                            '': '',
+                            '': 'Choose',
                             'small': 'Small',
                             'medium': 'Medium',
                             'large': 'Large'
