--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -105,16 +105,16 @@
                         'items': [
                             html.link({
                                 "label": html.icon('user') ~ " My details",
-                                "href": "#foo"
+                                "href": "#"
                             }),
                             html.link({
                                 "label": html.icon('key') ~ " Change password",
-                                "href": "#foo"
+                                "href": "#"
                             }),
                             html.divider(),
                             html.link({
                                 "label": html.icon('power-off') ~ " Sign out",
-                                "href": "#foo"
+                                "href": "#"
                             })
                         ]
                     })
