--- a/views/lexicon/forms/checkbox.html.twig
+++ b/views/lexicon/forms/checkbox.html.twig
@@ -8,14 +8,14 @@
 
     {{
         form.checkbox({
-            'id': 'checkbox-1',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox'
         })
     }}
 
     {{
         form.checkbox({
-            'id': 'checkbox-2',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox checked',
             'checked': true
         })
@@ -23,7 +23,7 @@
 
     {{
         form.checkbox({
-            'id': 'checkbox-3',
+            'id': 'guid-' ~ random(),
             'label': 'Required',
             'required': true
         })
@@ -31,7 +31,7 @@
 
     {{
         form.checkbox({
-            'id': 'checkbox-4',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox with help',
             'help': 'Help text to give more information about expected input'
         })
@@ -39,7 +39,7 @@
 
     {{
         form.checkbox({
-            'id': 'checkbox-5',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox with guidance',
             'guidance': 'Help text to give more information about expected input'
         })
@@ -47,6 +47,7 @@
 
     {{
         form.checkbox({
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox with guidance',
             'show-label': false,
             'help': 'This example hides the label with the <code>show-label</code> option',
@@ -58,14 +59,14 @@
 
     {{
         form.checkbox_inline({
-            'id': 'checkbox-6',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox inline'
         })
     }}
 
     {{
         form.checkbox_inline({
-            'id': 'checkbox-7',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox inline plus extras',
             'help': 'Help text to give more information about expected input',
             'guidance': 'Help text to give more information about expected input',
@@ -75,7 +76,7 @@
 
     {{
         form.checkbox_inline({
-            'id': 'checkbox-8',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox inline and indented',
             'class': 'form__group--indent form__group--full'
         })
@@ -83,7 +84,7 @@
 
     {{
         form.checkbox_inline({
-            'id': 'checkbox-9',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox inline, indented plus extras',
             'class': 'form__group--indent form__group--full',
             'help': 'Help text to give more information about expected input',
@@ -97,7 +98,7 @@
 
     {{
         form.checkbox({
-            'id': 'checkbox-10',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox with error',
             'error': 'Please complete this field'
         })
@@ -105,7 +106,7 @@
 
     {{
         form.checkbox({
-            'id': 'checkbox-11',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox with multiple errors',
             'error': ['Do this', 'Do this too']
         })
@@ -113,7 +114,7 @@
 
     {{
         form.checkbox({
-            'id': 'checkbox-12',
+            'id': 'guid-' ~ random(),
             'label': 'Checkbox with error and help',
             'error': 'Please complete this field',
             'help': 'Help text to give more information about expected input'
@@ -122,7 +123,7 @@
 
     {{
         form.checkbox({
-            'id': 'checkbox-13',
+            'id': 'guid-' ~ random(),
             'class': 'has-error',
             'label': 'Checkbox error with help only',
             'help': 'Help text to give more information about expected input'
@@ -134,7 +135,7 @@
 
     {{
         form.checkbox({
-            'id': 'checkbox-14',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-changed"',
             'class': 'has-changed',
             'help': 'Highlight whether an action elsewhere affects an input'
@@ -142,7 +143,7 @@
     }}
     {{
         form.checkbox({
-            'id': 'checkbox-15',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-success"',
             'class': 'has-success',
             'help': 'Something good happened'
@@ -151,7 +152,7 @@
 
     {{
         form.checkbox({
-            'id': 'checkbox-16',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-warning"',
             'class': 'has-warning',
             'help': 'Something bad happened'
@@ -159,7 +160,7 @@
     }}
     {{
         form.checkbox({
-            'id': 'checkbox-17',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-error"',
             'class': 'has-error',
             'help': 'Automatically added if using <code>error</code> option'
@@ -167,7 +168,7 @@
     }}
     {{
         form.checkbox({
-            'id': 'checkbox-18',
+            'id': 'guid-' ~ random(),
             'label': '"disabled": true',
             'disabled': true,
             'help': 'Stop! Can’t touch this'
@@ -177,7 +178,19 @@
     {{ form.fieldset_end() }}
 
     {{
-        form.end()
+        form.end({
+            'actions': [
+                html.button({
+                    'label': 'Save',
+                    'class': 'btn--primary',
+                    'type': 'submit'
+                }),
+                html.button({
+                    'label': 'Cancel',
+                    'class': 'btn--naked'
+                })
+            ]
+        })
     }}
 
 {% endblock tab_content %}
