--- a/views/lexicon/forms/date.html.twig
+++ b/views/lexicon/forms/date.html.twig
@@ -9,14 +9,14 @@
     {{
         form.date({
             'data-datepicker': 'false',
-            'id': 'date-noDayPicker',
+            'id': 'guid-' ~ random(),
             'label': 'Date field without date picker'
         })
     }}
 
     {{
         form.date({
-            'id': 'date-1',
+            'id': 'guid-' ~ random(),
             'label': 'Date field'
         })
     }}
@@ -24,7 +24,7 @@
     {{
         form.date({
             'format': 'US',
-            'id': 'date-US',
+            'id': 'guid-' ~ random(),
             'label': 'Date US style',
             'placeholder': 'mm/dd/yyyy'
         })
@@ -33,7 +33,7 @@
     {{
         form.date({
             'format': 'reverse',
-            'id': 'date-reverse',
+            'id': 'guid-' ~ random(),
             'label': 'Date reverse style',
             'placeholder': 'yyyy/mm/dd'
         })
@@ -41,7 +41,7 @@
 
     {{
         form.date({
-            'id': 'date-2',
+            'id': 'guid-' ~ random(),
             'label': 'Date field with value',
             'value': '04/07/1981'
         })
@@ -49,7 +49,7 @@
 
     {{
         form.date({
-            'id': 'date-3',
+            'id': 'guid-' ~ random(),
             'label': 'Required',
             'required': true
         })
@@ -57,7 +57,7 @@
 
     {{
         form.date({
-            'id': 'date-4',
+            'id': 'guid-' ~ random(),
             'label': 'Placeholder',
             'placeholder': 'Oh, hello'
         })
@@ -65,7 +65,7 @@
 
     {{
         form.date({
-            'id': 'date-5',
+            'id': 'guid-' ~ random(),
             'label': 'Date field with help',
             'help': 'Help text to give more information about expected input'
         })
@@ -73,7 +73,7 @@
 
     {{
         form.date({
-            'id': 'date-6',
+            'id': 'guid-' ~ random(),
             'label': 'Date field with guidance',
             'guidance': 'Help text to give more information about expected input'
         })
@@ -81,18 +81,18 @@
 
     {{
         form.date({
-            'id': 'date-7',
+            'id': 'guid-' ~ random(),
             'label': 'Required with guidance',
             'guidance': 'Help text to give more information about expected input',
             'required': true
         })
     }}
 
-    {{ form.fieldset_end() }}
     {{ form.fieldset_start({ 'legend': 'Alignment' }) }}
 
     {{
         form.date({
+            'id': 'guid-' ~ random(),
             'label': 'Date field',
             'show-label': false,
             'help': 'This example hides the label with the <code>show-label</code> option'
@@ -101,7 +101,7 @@
 
     {{
         form.date({
-            'id': 'date-8',
+            'id': 'guid-' ~ random(),
             'label': 'Text input with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
@@ -112,7 +112,7 @@
 
     {{
         form.date({
-            'id': 'date-9',
+            'id': 'guid-' ~ random(),
             'label': 'Text input with a longer than expected label but this time we use the form__group--top class to keep the label on a single line',
             'class': 'form__group--top',
             'name': 'inputTextLong',
@@ -124,7 +124,7 @@
 
     {{
         form.date({
-            'id': 'date-10',
+            'id': 'guid-' ~ random(),
             'label': 'The same as above, but this time we also add the .form__group--flush class to keep everything on the left edge',
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
@@ -139,7 +139,7 @@
 
     {{
         form.date({
-            'id': 'date-11',
+            'id': 'guid-' ~ random(),
             'label': 'Date field with error',
             'error': 'Please complete this field'
         })
@@ -147,7 +147,7 @@
 
     {{
         form.date({
-            'id': 'date-12',
+            'id': 'guid-' ~ random(),
             'label': 'Date field with multiple errors',
             'error': ['Do this', 'Do this too']
         })
@@ -155,7 +155,7 @@
 
     {{
         form.date({
-            'id': 'date-13',
+            'id': 'guid-' ~ random(),
             'label': 'Date field with error and help',
             'error': 'Please complete this field',
             'help': 'Help text to give more information about expected input'
@@ -164,7 +164,7 @@
 
     {{
         form.date({
-            'id': 'date-14',
+            'id': 'guid-' ~ random(),
             'class': 'has-error',
             'label': 'Date field error with help only',
             'help': 'Help text to give more information about expected input'
@@ -176,7 +176,7 @@
 
     {{
         form.date({
-            'id': 'date-15',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-changed"',
             'class': 'has-changed',
             'help': 'Highlight whether an action elsewhere affects an input'
@@ -184,7 +184,7 @@
     }}
     {{
         form.date({
-            'id': 'date-16',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-success"',
             'class': 'has-success',
             'help': 'Something good happened'
@@ -193,7 +193,7 @@
 
     {{
         form.date({
-            'id': 'date-17',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-warning"',
             'class': 'has-warning',
             'help': 'Something bad happened'
@@ -201,7 +201,7 @@
     }}
     {{
         form.date({
-            'id': 'date-18',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-error"',
             'class': 'has-error',
             'help': 'Automatically added if using <code>error</code> option'
@@ -209,7 +209,7 @@
     }}
     {{
         form.date({
-            'id': 'date-19',
+            'id': 'guid-' ~ random(),
             'label': '"disabled": true',
             'disabled': true,
             'help': 'Stop! Can’t touch this'
@@ -221,7 +221,7 @@
 
     {{
         form.date({
-            'id': 'date-1-col',
+            'id': 'guid-' ~ random(),
             'label': 'One column',
             'class': 'form__control-col--1',
             'name': 'inputDateMini',
@@ -230,7 +230,7 @@
 
     {{
         form.date({
-            'id': 'date-2-col',
+            'id': 'guid-' ~ random(),
             'label': 'Two columns',
             'class': 'form__control-col--2',
             'name': 'inputDateSmall'
@@ -239,7 +239,7 @@
 
     {{
         form.date({
-            'id': 'date-3-col',
+            'id': 'guid-' ~ random(),
             'label': 'Three columns',
             'class': 'form__control-col--3',
             'name': 'inputDateMedium'
@@ -248,7 +248,7 @@
 
     {{
         form.date({
-            'id': 'date-4-col',
+            'id': 'guid-' ~ random(),
             'label': 'Four columns',
             'class': 'form__control-col--4',
             'name': 'inputDateRegular'
@@ -257,7 +257,7 @@
 
     {{
         form.date({
-            'id': 'date-5-col',
+            'id': 'guid-' ~ random(),
             'label': 'Five columns',
             'class': 'form__control-col--5',
             'name': 'inputDateLarge'
@@ -266,7 +266,7 @@
 
     {{
         form.date({
-            'id': 'date-6-col',
+            'id': 'guid-' ~ random(),
             'label': 'Six columns',
             'class': 'form__control-col--6',
             'name': 'inputDateXLarge'
@@ -275,7 +275,7 @@
 
     {{
         form.date({
-            'id': 'date-7-col',
+            'id': 'guid-' ~ random(),
             'label': 'Seven columns',
             'class': 'form__control-col--7',
             'name': 'inputDateFull'
@@ -284,7 +284,7 @@
 
     {{
         form.date({
-            'id': 'date-8-col',
+            'id': 'guid-' ~ random(),
             'label': 'Eight columns',
             'class': 'form__control-col--8',
             'name': 'inputDateFull'
@@ -293,7 +293,7 @@
 
     {{
         form.date({
-            'id': 'date-9-col',
+            'id': 'guid-' ~ random(),
             'label': 'Nine columns',
             'class': 'form__control-col--9',
             'name': 'inputDateFull'
@@ -305,7 +305,7 @@
 
     {{
         form.date({
-            'id': 'date-20',
+            'id': 'guid-' ~ random(),
             'label': 'Mini',
             'class': 'form__group--mini',
             'name': 'inputTextMini'
@@ -314,7 +314,7 @@
 
     {{
         form.date({
-            'id': 'date-21',
+            'id': 'guid-' ~ random(),
             'label': 'Small',
             'class': 'form__group--small',
             'name': 'inputTextSmall'
@@ -323,7 +323,7 @@
 
     {{
         form.date({
-            'id': 'date-22',
+            'id': 'guid-' ~ random(),
             'label': 'Medium',
             'class': 'form__group--medium',
             'name': 'inputTextMedium'
@@ -332,7 +332,7 @@
 
     {{
         form.date({
-            'id': 'date-23',
+            'id': 'guid-' ~ random(),
             'label': 'Regular',
             'class': 'form__group--regular',
             'name': 'inputTextRegular'
@@ -341,7 +341,7 @@
 
     {{
         form.date({
-            'id': 'date-24',
+            'id': 'guid-' ~ random(),
             'label': 'Large',
             'class': 'form__group--large',
             'name': 'inputTextLarge'
@@ -350,7 +350,7 @@
 
     {{
         form.date({
-            'id': 'date-25',
+            'id': 'guid-' ~ random(),
             'label': 'Extra Large',
             'class': 'form__group--xlarge',
             'name': 'inputTextXLarge'
@@ -359,7 +359,7 @@
 
     {{
         form.date({
-            'id': 'date-26',
+            'id': 'guid-' ~ random(),
             'label': 'Full',
             'class': 'form__group--full',
             'name': 'inputTextFull'
@@ -371,7 +371,7 @@
 
     {{
         form.date({
-            'id': 'date-27',
+            'id': 'guid-' ~ random(),
             'label': 'Prepended',
             'prepend': html.icon('calendar')
         })
@@ -379,7 +379,7 @@
 
     {{
         form.date({
-            'id': 'date-28',
+            'id': 'guid-' ~ random(),
             'label': 'Appended',
             'append': html.icon('calendar')
         })
@@ -387,7 +387,7 @@
 
     {{
         form.date({
-            'id': 'date-29',
+            'id': 'guid-' ~ random(),
             'label': 'Appended with guidance',
             'append': html.icon('calendar'),
             'guidance': 'Help text to give more information about expected input'
@@ -396,7 +396,7 @@
 
     {{
         form.date({
-            'id': 'date-30',
+            'id': 'guid-' ~ random(),
             'label': 'Prepended &amp; Appended',
             'append': html.icon('calendar'),
             'prepend': html.icon('calendar')
@@ -404,7 +404,7 @@
     }}
 
     {{ form.fieldset_end() }}
-    
+
 
     {{ form.fieldset_start({ 'legend': 'Prepended Grid Sizes' }) }}
     {% for i in 1..9 %}
@@ -497,7 +497,19 @@
 
 
     {{
-        form.end()
+        form.end({
+            'actions': [
+                html.button({
+                    'label': 'Save',
+                    'class': 'btn--primary',
+                    'type': 'submit'
+                }),
+                html.button({
+                    'label': 'Cancel',
+                    'class': 'btn--naked'
+                })
+            ]
+        })
     }}
 
 {% endblock tab_content %}
