--- a/views/lexicon/forms/radio.html.twig
+++ b/views/lexicon/forms/radio.html.twig
@@ -8,14 +8,14 @@
 
     {{
         form.radio({
-            'id': 'radio-1',
+            'id': 'guid-' ~ random(),
             'label': 'Radio'
         })
     }}
 
     {{
         form.radio({
-            'id': 'radio-2',
+            'id': 'guid-' ~ random(),
             'label': 'Radio selected',
             'checked': true
         })
@@ -23,7 +23,7 @@
 
     {{
         form.radio({
-            'id': 'radio-3',
+            'id': 'guid-' ~ random(),
             'label': 'Required',
             'required': true
         })
@@ -31,7 +31,7 @@
 
     {{
         form.radio({
-            'id': 'radio-4',
+            'id': 'guid-' ~ random(),
             'label': 'Radio with help',
             'help': 'Help text to give more information about expected input'
         })
@@ -39,7 +39,7 @@
 
     {{
         form.radio({
-            'id': 'radio-5',
+            'id': 'guid-' ~ random(),
             'label': 'Radio with guidance',
             'guidance': 'Help text to give more information about expected input'
         })
@@ -47,6 +47,7 @@
 
     {{
         form.radio({
+            'id': 'guid-' ~ random(),
             'label': 'Radio',
             'show-label': false,
             'help': 'This example hides the label with the <code>show-label</code> option'
@@ -57,14 +58,14 @@
 
     {{
         form.radio_inline({
-            'id': 'radio-6',
+            'id': 'guid-' ~ random(),
             'label': 'Radio inline'
         })
     }}
 
     {{
         form.radio_inline({
-            'id': 'radio-7',
+            'id': 'guid-' ~ random(),
             'label': 'Radio inline plus extras',
             'help': 'Help text to give more information about expected input',
             'guidance': 'Help text to give more information about expected input',
@@ -74,7 +75,7 @@
 
     {{
         form.radio_inline({
-            'id': 'radio-8',
+            'id': 'guid-' ~ random(),
             'label': 'Radio inline and indented',
             'class': 'form__group--indent form__group--full'
         })
@@ -82,7 +83,7 @@
 
     {{
         form.radio_inline({
-            'id': 'radio-9',
+            'id': 'guid-' ~ random(),
             'label': 'Radio inline, indented plus extras',
             'class': 'form__group--indent form__group--full',
             'help': 'Help text to give more information about expected input',
@@ -96,7 +97,7 @@
 
     {{
         form.radio({
-            'id': 'radio-10',
+            'id': 'guid-' ~ random(),
             'label': 'Radio with error',
             'error': 'Please complete this field'
         })
@@ -104,7 +105,7 @@
 
     {{
         form.radio({
-            'id': 'radio-11',
+            'id': 'guid-' ~ random(),
             'label': 'Radio with multiple errors',
             'error': ['Do this', 'Do this too']
         })
@@ -112,7 +113,7 @@
 
     {{
         form.radio({
-            'id': 'radio-12',
+            'id': 'guid-' ~ random(),
             'label': 'Radio with error and help',
             'error': 'Please complete this field',
             'help': 'Help text to give more information about expected input'
@@ -121,7 +122,7 @@
 
     {{
         form.radio({
-            'id': 'radio-13',
+            'id': 'guid-' ~ random(),
             'class': 'has-error',
             'label': 'Radio error with help only',
             'help': 'Help text to give more information about expected input'
@@ -133,7 +134,7 @@
 
     {{
         form.radio({
-            'id': 'radio-14',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-changed"',
             'class': 'has-changed',
             'help': 'Highlight whether an action elsewhere affects an input'
@@ -141,7 +142,7 @@
     }}
     {{
         form.radio({
-            'id': 'radio-15',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-success"',
             'class': 'has-success',
             'help': 'Something good happened'
@@ -150,7 +151,7 @@
 
     {{
         form.radio({
-            'id': 'radio-16',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-warning"',
             'class': 'has-warning',
             'help': 'Something bad happened'
@@ -158,7 +159,7 @@
     }}
     {{
         form.radio({
-            'id': 'radio-17',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-error"',
             'class': 'has-error',
             'help': 'Automatically added if using <code>error</code> option'
@@ -166,7 +167,7 @@
     }}
     {{
         form.radio({
-            'id': 'radio-18',
+            'id': 'guid-' ~ random(),
             'label': '"disabled": true',
             'disabled': true,
             'help': 'Stop! Can’t touch this'
@@ -176,7 +177,19 @@
     {{ form.fieldset_end() }}
 
     {{
-        form.end()
+        form.end({
+            'actions': [
+                html.button({
+                    'label': 'Save',
+                    'class': 'btn--primary',
+                    'type': 'submit'
+                }),
+                html.button({
+                    'label': 'Cancel',
+                    'class': 'btn--naked'
+                })
+            ]
+        })
     }}
 
 {% endblock tab_content %}
