--- a/views/lexicon/forms/textarea.html.twig
+++ b/views/lexicon/forms/textarea.html.twig
@@ -8,14 +8,14 @@
 
     {{
         form.textarea({
-            'id': 'textarea-1',
+            'id': 'guid-' ~ random(),
             'label': 'Textarea'
         })
     }}
 
     {{
         form.textarea({
-            'id': 'textarea-2',
+            'id': 'guid-' ~ random(),
             'label': 'Textarea with value',
             'value': 'My value'
         })
@@ -23,7 +23,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-3',
+            'id': 'guid-' ~ random(),
             'label': 'Required',
             'required': true
         })
@@ -31,7 +31,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-4',
+            'id': 'guid-' ~ random(),
             'label': 'Placeholder',
             'placeholder': 'Oh, hello'
         })
@@ -39,7 +39,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-5',
+            'id': 'guid-' ~ random(),
             'label': 'Textarea with help',
             'help': 'Help text to give more information about expected input'
         })
@@ -47,7 +47,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-6',
+            'id': 'guid-' ~ random(),
             'label': 'Textarea with guidance',
             'guidance': 'Help text to give more information about expected input'
         })
@@ -55,19 +55,18 @@
 
     {{
         form.textarea({
-            'id': 'textarea-7',
+            'id': 'guid-' ~ random(),
             'label': 'Required with guidance',
             'guidance': 'Help text to give more information about expected input',
             'required': true
         })
     }}
 
-    {{ form.fieldset_end() }}
     {{ form.fieldset_start({ 'legend': 'Alignment' }) }}
 
     {{
         form.textarea({
-            'id': 'textarea-8',
+            'id': 'guid-' ~ random(),
             'label': 'Textarea',
             'show-label': false,
             'help': 'This example hides the label with the <code>show-label</code> option'
@@ -76,7 +75,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-9',
+            'id': 'guid-' ~ random(),
             'label': 'Text input with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline',
             'name': 'inputTextLong',
             'placeholder': 'Placeholder',
@@ -87,7 +86,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-10',
+            'id': 'guid-' ~ random(),
             'label': 'Text input with a longer than expected label but this time we use the form__group--top class to keep the label on a single line',
             'class': 'form__group--top',
             'name': 'inputTextLong',
@@ -99,7 +98,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-11',
+            'id': 'guid-' ~ random(),
             'label': 'The same as above, but this time we also add the .form__group--flush class to keep everything on the left edge',
             'class': 'form__group--top form__group--flush',
             'name': 'inputTextLong',
@@ -109,11 +108,12 @@
         })
     }}
 
+    {{ form.fieldset_end() }}
     {{ form.fieldset_start({ 'legend': 'Errors &amp; Validation' }) }}
 
     {{
         form.textarea({
-            'id': 'textarea-12',
+            'id': 'guid-' ~ random(),
             'label': 'Textarea with error',
             'error': 'Please complete this field'
         })
@@ -121,7 +121,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-13',
+            'id': 'guid-' ~ random(),
             'label': 'Textarea with multiple errors',
             'error': ['Do this', 'Do this too']
         })
@@ -129,7 +129,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-14',
+            'id': 'guid-' ~ random(),
             'label': 'Textarea with error and help',
             'error': 'Please complete this field',
             'help': 'Help text to give more information about expected input'
@@ -138,7 +138,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-15',
+            'id': 'guid-' ~ random(),
             'class': 'has-error',
             'label': 'Textarea error with help only',
             'help': 'Help text to give more information about expected input'
@@ -150,7 +150,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-16',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-changed"',
             'class': 'has-changed',
             'help': 'Highlight whether an action elsewhere affects an input'
@@ -158,7 +158,7 @@
     }}
     {{
         form.textarea({
-            'id': 'textarea-17',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-success"',
             'class': 'has-success',
             'help': 'Something good happened'
@@ -167,7 +167,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-18',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-warning"',
             'class': 'has-warning',
             'help': 'Something bad happened'
@@ -175,7 +175,7 @@
     }}
     {{
         form.textarea({
-            'id': 'textarea-19',
+            'id': 'guid-' ~ random(),
             'label': '"class": "has-error"',
             'class': 'has-error',
             'help': 'Automatically added if using <code>error</code> option'
@@ -183,7 +183,7 @@
     }}
     {{
         form.textarea({
-            'id': 'textarea-20',
+            'id': 'guid-' ~ random(),
             'label': '"disabled": true',
             'disabled': true,
             'help': 'Stop! Can’t touch this'
@@ -195,7 +195,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-1-col',
+            'id': 'guid-' ~ random(),
             'label': 'One column',
             'class': 'form__control-col--1',
             'name': 'inputTextareaMini',
@@ -204,7 +204,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-2-col',
+            'id': 'guid-' ~ random(),
             'label': 'Two columns',
             'class': 'form__control-col--2',
             'name': 'inputTextareaSmall'
@@ -213,7 +213,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-3-col',
+            'id': 'guid-' ~ random(),
             'label': 'Three columns',
             'class': 'form__control-col--3',
             'name': 'inputTextareaMedium'
@@ -222,7 +222,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-4-col',
+            'id': 'guid-' ~ random(),
             'label': 'Four columns',
             'class': 'form__control-col--4',
             'name': 'inputTextareaRegular'
@@ -231,7 +231,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-5-col',
+            'id': 'guid-' ~ random(),
             'label': 'Five columns',
             'class': 'form__control-col--5',
             'name': 'inputTextareaLarge'
@@ -240,7 +240,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-6-col',
+            'id': 'guid-' ~ random(),
             'label': 'Six columns',
             'class': 'form__control-col--6',
             'name': 'inputTextareaXLarge'
@@ -249,7 +249,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-7-col',
+            'id': 'guid-' ~ random(),
             'label': 'Seven columns',
             'class': 'form__control-col--7',
             'name': 'inputTextareaFull'
@@ -258,7 +258,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-8-col',
+            'id': 'guid-' ~ random(),
             'label': 'Eight columns',
             'class': 'form__control-col--8',
             'name': 'inputTextareaFull'
@@ -267,7 +267,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-9-col',
+            'id': 'guid-' ~ random(),
             'label': 'Nine columns',
             'class': 'form__control-col--9',
             'name': 'inputTextareaFull'
@@ -279,7 +279,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-21',
+            'id': 'guid-' ~ random(),
             'label': 'Mini',
             'class': 'form__group--mini',
             'name': 'inputTextMini'
@@ -288,7 +288,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-22',
+            'id': 'guid-' ~ random(),
             'label': 'Small',
             'class': 'form__group--small',
             'name': 'inputTextSmall'
@@ -297,7 +297,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-23',
+            'id': 'guid-' ~ random(),
             'label': 'Medium',
             'class': 'form__group--medium',
             'name': 'inputTextMedium'
@@ -306,7 +306,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-24',
+            'id': 'guid-' ~ random(),
             'class': 'form__group--regular',
             'label': 'Regular',
             'name': 'inputTextRegular'
@@ -315,7 +315,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-25',
+            'id': 'guid-' ~ random(),
             'label': 'Large',
             'class': 'form__group--large',
             'name': 'inputTextLarge'
@@ -324,7 +324,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-26',
+            'id': 'guid-' ~ random(),
             'label': 'Extra Large',
             'class': 'form__group--xlarge',
             'name': 'inputTextXLarge'
@@ -333,7 +333,7 @@
 
     {{
         form.textarea({
-            'id': 'textarea-27',
+            'id': 'guid-' ~ random(),
             'label': 'Full',
             'class': 'form__group--full',
             'name': 'inputTextFull'
@@ -343,7 +343,19 @@
     {{ form.fieldset_end() }}
 
     {{
-        form.end()
+        form.end({
+            'actions': [
+                html.button({
+                    'label': 'Save',
+                    'class': 'btn--primary',
+                    'type': 'submit'
+                }),
+                html.button({
+                    'label': 'Cancel',
+                    'class': 'btn--naked'
+                })
+            ]
+        })
     }}
 
 {% endblock tab_content %}
