--- a/views/lexicon/patterns/disabled-ui/disabled-ui.html.twig
+++ b/views/lexicon/patterns/disabled-ui/disabled-ui.html.twig
@@ -15,6 +15,8 @@
     })
 }}
 
+    {{ form.fieldset_start({ 'legend': 'Example disabled UI' }) }}
+
     <p>Example text</p>
 
     {{
@@ -35,24 +37,28 @@
 
     {{
         form.checkbox({
+            'id': 'checkbox-' ~ random(),
             'label': 'Normal checkbox'
         })
     }}
 
     {{
         form.checkbox({
+            'id': 'checkbox-' ~ random(),
             'label': 'Disabled checkbox',
             'disabled': true
         })
     }}
 
+    {{ form.fieldset_end() }}
 
 {{
     form.end({
         'actions': [
             html.button({
                 'label': 'Save Changes',
-                'class': 'btn--primary'
+                'class': 'btn--primary',
+                'type': 'submit'
             }),
             html.button({
                 'label': 'Cancel',
