--- a/views/lexicon/patterns/masterswitch/masterswitch-disabled-form-wrapper.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-disabled-form-wrapper.html.twig
@@ -12,19 +12,22 @@
             form.toggle_switch({
                 'class': 'masterswitch-control',
                 'label': 'Enable masterswitch content',
-                'id': 'toggletest4'
+                'id': 'toggle-' ~ random(),
             })
         }}
 
         <hr />
 
         <section class="masterswitch-content is-disabled">
+
             <p>This content should be disabled until the masterswitch is turned on.</p>
+
+            {{ form.fieldset_start({'legend': 'Masterswitch content'}) }}
 
             {{
                 form.text({
                     'label': 'Text input',
-                    'id': 'inputText-1',
+                    'id': 'text-' ~ random(),
                     'name': 'inputText',
                     'placeholder': 'Placeholder'
                 })
@@ -32,19 +35,21 @@
 
             {{
                 html.link({
-                    'label': 'External link',
-                    'href': 'http://google.com'
+                    'label': 'Link',
+                    'href': '#'
                 })
             }}
 
             {{
                 form.checkbox({
+                    'id': 'checkbox-' ~ random(),
                     'label': 'Normal checkbox'
                 })
             }}
 
             {{
                 form.checkbox({
+                    'id': 'checkbox-' ~ random(),
                     'label': 'Disabled checkbox',
                     'disabled': true
                 })
@@ -53,19 +58,23 @@
             {{
                 html.link({
                     'label': 'Disabled link',
-                    'href': '#normal',
+                    'href': '#',
                     'disabled': true
                 })
-            }}<!--
+            }}
+
+            {{ form.fieldset_end() }}<!--
      --></section>
     </div>
+
 {{
     form.end({
-        'class': 'form__actions--flush',
+        'class': 'form__actions',
         'actions': [
             html.button({
                 'label': 'Save Changes',
-                'class': 'btn--primary'
+                'class': 'btn--primary',
+                'type': 'submit'
             }),
             html.button({
                 'label': 'Cancel',
