--- a/views/lexicon/patterns/no-results/table.html.twig
+++ b/views/lexicon/patterns/no-results/table.html.twig
@@ -6,21 +6,21 @@
             <tr>
                 <td class="table-responsive"></td>
                 <td class="table-selection"></td>
-                <th><a href="#">Name</a></th>
-                <th><a href="#">IP</a></th>
-                <th><a href="#">Status</a></th>
-                <th><a href="#">Uptime</a></th>
-                <th><a href="#">Image</a></th>
-                <th><a href="#">RAM</a></th>
-                <th class="centered"><a href="#">CPUs</a></th>
-                <th><a href="#">Actions</a></th>
+                <th>Name</th>
+                <th>IP</th>
+                <th>Status</th>
+                <th>Uptime</th>
+                <th>Image</th>
+                <th>RAM</th>
+                <th class="centered">CPUs</th>
+                <th>Actions</th>
             </tr>
             <tr class="no-results">
                 <td id="no-results" class="no-results" colspan="10">
                     <div class="no-results__message">
                         <p>There are currently no things for this form</p>
                     </div>
-                    <a href="#rule-form" class="btn btn--primary js-create-rule no-results__action">Create Thing</a>
+                    <a href="#" class="btn btn--primary js-create-rule no-results__action">Create Thing</a>
                 </td>
             </tr>
         </thead>
