--- a/views/lexicon/patterns/reporting/report.html.twig
+++ b/views/lexicon/patterns/reporting/report.html.twig
@@ -185,6 +185,7 @@
             <span class="report__timeframe">Created within last 30 days</span>
             {{
                 form.text({
+                    'aria-label': 'Change date range',
                     'value': '01/01/2015 - 01/31/2015',
                     'prepend': html.icon('calendar'),
                     'name': 'daterange',
@@ -250,157 +251,162 @@
     </div>
     <div class="modal modal--large" id="schedule-add" role="dialog" aria-labelledby="dialog-title" aria-describedby="dialog-description">
         <div class="modal__dialog">
-          <div class="modal__content">
-            <div class="modal__header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
-              <h4 class="modal__title">Add Schedule</h4>
-            </div>
-            <div class="modal__body">
-                <p id="dialog-description" class="hide">Here goes a short description (a couple of lines) about the modal's purpose, if needed.</p>
+            <div class="modal__content">
+                <div class="modal__header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close dialog">×</button>
+                    <h4 class="modal__title" id="dialog-title">Add Schedule</h4>
+                </div>
                 {{ form.create() }}
+                <div class="modal__body">
+                    <p id="dialog-description" class="hide">Here goes a short description (a couple of lines) about the modal's purpose, if needed.</p>
 
-                    {{
-                        form.text({
-                            'label': 'Schedule name',
-                            'class': 'form__group--full',
-                            'help': 'Used in the email subject line. Must be unique',
-                            'required': true,
-                            'autofocus': true
-                        })
-                    }}
-
-                    {{
-                        form.choice({
-                            'label': 'Run report on',
-                            'class': 'choice--bubbles choice--bubbles-inline',
-                            'multiple': true,
-                            'optimize': 'few',
-                            'required': true,
-                            'options': [
-                                {
-                                    'label': 'MO',
-                                    'value': 'mon',
-                                    'name': 'days'
-                                },
-                                {
-                                    'label': 'TU',
-                                    'value': 'tue',
-                                    'name': 'days'
-                                },
-                                {
-                                    'label': 'WE',
-                                    'value': 'wed',
-                                    'name': 'days'
-                                },
-                                {
-                                    'label': 'TH',
-                                    'value': 'thu',
-                                    'name': 'days'
-                                },
-                                {
-                                    'label': 'FR',
-                                    'value': 'fri',
-                                    'name': 'days'
-                                },
-                                {
-                                    'label': 'SA',
-                                    'value': 'sat',
-                                    'name': 'days'
-                                },
-                                {
-                                    'label': 'SU',
-                                    'value': 'sun',
-                                    'name': 'days'
-                                }
-                            ]
-                        })
-                    }}
-
-                    {{
-                        form.text({
-                            'label': 'At',
-                            'class': 'form__group--small',
-                            'placeholder': 'hh:mm',
-                            'required': true,
-                            'help': 'Emails will be sent when the report has finished building'
-                        })
-                    }}
-
-                    {{
-                        form.content({
-                            'label': 'Start schedule',
-                            'value': 'Immediately ' ~ html.link({'href': '#', 'label': 'change'}),
-                            'class': 'form__group--full'
-                        })
-                    }}
-
-                    {{
-                        form.choice({
-                            'label': 'Repeat',
-                            'options': [
-                                {
-                                    'label': 'Every week',
-                                    'value': 'weekly'
-                                },
-                                {
-                                    'label': 'Every 2 weeks',
-                                    'value': 'fortnightly'
-                                },
-                                {
-                                    'label': 'Every month',
-                                    'value': 'monthly'
-                                },
-                                {
-                                    'label': 'Every 6 months',
-                                    'value': 'six-monthly'
-                                },
-                                {
-                                    'label': 'Every year',
-                                    'value': 'yearly'
-                                }
-                            ]
-                        })
-                    }}
-
-                    {{
-                        form.content({
-                            'label': 'End repeat',
-                            'value': 'Never (run indefinitely) ' ~ html.link({'href': '#', 'label': 'change'}),
-                            'class': 'form__group--full'
-                        })
-                    }}
-
-                    {{
-                        form.text({
-                            'label': 'Email report to',
-                            'class': 'form__group--full',
-                            'placeholder': 'Email address',
-                            'guidance': 'Recipients will be BCC’d',
-                            'required': true
-                        })
-                    }}
-
-            </div>
-            <div class="modal__footer">
-                {{
-                    form.end({
-                        'actions': [
-                            form.submit({
-                                'class': 'btn--primary',
-                                'label': 'Save'
-                            }),
-                            html.button({
-                                'label': 'Cancel',
-                                'class': 'btn--naked',
-                                'data-dismiss': 'modal'
+                        {{
+                            form.text({
+                                'id': 'text-' ~ random(),
+                                'label': 'Schedule name',
+                                'class': 'form__group--full',
+                                'help': 'Used in the email subject line. Must be unique',
+                                'required': true,
+                                'autofocus': true
                             })
-                        ]
-                    })
-                }}
-            </div>
-          </div><!-- /.modal__content -->
+                        }}
+
+                        {{
+                            form.choice({
+                                'id': 'choice-' ~ random(),
+                                'label': 'Run report on',
+                                'class': 'choice--bubbles choice--bubbles-inline',
+                                'multiple': true,
+                                'optimize': 'few',
+                                'required': true,
+                                'options': [
+                                    {
+                                        'label': 'MO',
+                                        'value': 'mon',
+                                        'name': 'days'
+                                    },
+                                    {
+                                        'label': 'TU',
+                                        'value': 'tue',
+                                        'name': 'days'
+                                    },
+                                    {
+                                        'label': 'WE',
+                                        'value': 'wed',
+                                        'name': 'days'
+                                    },
+                                    {
+                                        'label': 'TH',
+                                        'value': 'thu',
+                                        'name': 'days'
+                                    },
+                                    {
+                                        'label': 'FR',
+                                        'value': 'fri',
+                                        'name': 'days'
+                                    },
+                                    {
+                                        'label': 'SA',
+                                        'value': 'sat',
+                                        'name': 'days'
+                                    },
+                                    {
+                                        'label': 'SU',
+                                        'value': 'sun',
+                                        'name': 'days'
+                                    }
+                                ]
+                            })
+                        }}
+
+                        {{
+                            form.text({
+                                'id': 'text-' ~ random(),
+                                'label': 'At',
+                                'class': 'form__group--small',
+                                'placeholder': 'hh:mm',
+                                'required': true,
+                                'help': 'Emails will be sent when the report has finished building'
+                            })
+                        }}
+
+                        {{
+                            form.content({
+                                'label': 'Start schedule',
+                                'value': 'Immediately ' ~ html.link({'href': '#', 'label': 'change'}),
+                                'class': 'form__group--full'
+                            })
+                        }}
+
+                        {{
+                            form.choice({
+                                'id': 'choice-' ~ random(),
+                                'label': 'Repeat',
+                                'options': [
+                                    {
+                                        'label': 'Every week',
+                                        'value': 'weekly'
+                                    },
+                                    {
+                                        'label': 'Every 2 weeks',
+                                        'value': 'fortnightly'
+                                    },
+                                    {
+                                        'label': 'Every month',
+                                        'value': 'monthly'
+                                    },
+                                    {
+                                        'label': 'Every 6 months',
+                                        'value': 'six-monthly'
+                                    },
+                                    {
+                                        'label': 'Every year',
+                                        'value': 'yearly'
+                                    }
+                                ]
+                            })
+                        }}
+
+                        {{
+                            form.content({
+                                'label': 'End repeat',
+                                'value': 'Never (run indefinitely) ' ~ html.link({'href': '#', 'label': 'change'}),
+                                'class': 'form__group--full'
+                            })
+                        }}
+
+                        {{
+                            form.text({
+                                'id': 'text-' ~ random(),
+                                'label': 'Email report to',
+                                'class': 'form__group--full',
+                                'placeholder': 'Email address',
+                                'guidance': 'Recipients will be BCC’d',
+                                'required': true
+                            })
+                        }}
+
+                </div>
+                <div class="modal__footer">
+                    {{
+                        form.submit({
+                            'class': 'btn--primary',
+                            'label': 'Save'
+                        })
+                    }}
+
+                    {{
+                        html.button({
+                            'label': 'Cancel',
+                            'class': 'btn--naked',
+                            'data-dismiss': 'modal'
+                        })
+                    }}
+                </div>
+                {{ form.end() }}
+            </div><!-- /.modal__content -->
         </div><!-- /.modal__dialog -->
-      </div><!-- /.modal -->
+    </div><!-- /.modal -->
 {% endblock %}
 
 {% block javascript %}
