--- a/views/lexicon/tabs/analytics.html.twig
+++ b/views/lexicon/tabs/analytics.html.twig
@@ -24,7 +24,7 @@
                     {{
                         html.link({
                             'label': '123.123.123.123',
-                            'href': '#exampledeck'
+                            'href': '#'
                         })
                      }}
                 </td>
@@ -40,7 +40,7 @@
                     {{
                         html.link({
                             'label': '123.123.123.123',
-                            'href': '#exampledeck'
+                            'href': '#'
                         })
                      }}
                 </td>
@@ -56,7 +56,7 @@
                     {{
                         html.link({
                             'label': '123.123.123.123',
-                            'href': '#exampledeck'
+                            'href': '#'
                         })
                     }}
                 </td>
@@ -72,7 +72,7 @@
                     {{
                         html.link({
                             'label': '123.123.123.123',
-                            'href': '#exampledeck'
+                            'href': '#'
                         })
                     }}
                 </td>
@@ -88,7 +88,7 @@
                     {{
                         html.link({
                             'label': '123.123.123.123',
-                            'href': '#exampledeck'
+                            'href': '#'
                         })
                     }}
                 </td>
@@ -104,7 +104,7 @@
                     {{
                         html.link({
                             'label': '123.123.123.123',
-                            'href': '#exampledeck'
+                            'href': '#'
                         })
                     }}
                 </td>
@@ -120,7 +120,7 @@
                     {{
                         html.link({
                             'label': '123.123.123.123',
-                            'href': '#exampledeck'
+                            'href': '#'
                         })
                     }}
                 </td>
@@ -136,7 +136,7 @@
                     {{
                         html.link({
                             'label': '123.123.123.123',
-                            'href': '#exampledeck'
+                            'href': '#'
                         })
                     }}
                 </td>
@@ -152,7 +152,7 @@
                     {{
                         html.link({
                             'label': '123.123.123.123',
-                            'href': '#exampledeck'
+                            'href': '#'
                         })
                     }}
                 </td>
@@ -168,7 +168,7 @@
                     {{
                         html.link({
                             'label': '123.123.123.123',
-                            'href': '#exampledeck'
+                            'href': '#'
                         })
                     }}
                 </td>
